--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main-grid-container">
-        <div class="dashboard-aread">
+        <div class="dashboard-area">
             <div class="icon-container"></div>
             <div class="user-information-container"></div>
             <div class="setting-container"></div>
