Add google icon link to header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Admin Dashboard</title>
 </head>
 <body>
     <div class="main-grid-container">
         <div class="dashboard-area">
-            <div class="icon-container"></div>
+            <div class="icon-container">
+                <div class="logo">Logo</div>
+                <div class="dashboard">Dashboard</div>
+            </div>
             <div class="user-information-container"></div>
             <div class="setting-container"></div>
         </div>
