Replace div tag to ul in user information container

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 <div class="logo">Logo</div>
                 <div class="dashboard">Dashboard</div>
             </div>
-            <div class="user-information-container"></div>
+            <ul class="user-information-container">
+                <li class="li-container home">Home</li>
+                <li class="li-container profile">Profile</li>
+                <li class="li-container message">Messages</li>
+                <li class="li-container history">History</li>
+                <li class="li-container task">Tasks</li>
+                <li class="li-container community">Communities</li>
+            </ul>
             <div class="setting-container"></div>
         </div>
         <div class="searchbar-and-account-area">
