Replace div tag with ul tag in setting container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <li class="li-container task">Tasks</li>
                 <li class="li-container community">Communities</li>
             </ul>
-            <div class="setting-container"></div>
+            <ul class="setting-container">
+                <li class="li-container setting"> Settings</li>
+                <li class="li-container support">Support</li>
+                <li class="li-container privacy">Privacy</li>
+            </ul>
         </div>
         <div class="searchbar-and-account-area">
             <div class="search-bar-container"></div>
