Add label and input tag

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             </ul>
         </div>
         <div class="searchbar-and-account-area">
-            <div class="search-bar-container"></div>
+            <div class="search-bar-container">
+                <label class="search-bar-icon" for="search-box">Search</label>
+                <input type="input" id="search-box">
+            </div>
             <div class="noti-user-name-container"></div>
         </div>
         <div class="navbar-area">
