Add ul and li tag to noti user name container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
                 <label class="search-bar-icon" for="search-box">Search</label>
                 <input type="input" id="search-box">
             </div>
-            <div class="noti-user-name-container"></div>
+            <div class="noti-user-name-container">
+                <ul>
+                    <li class="noti-li-container icon">IconR</li>
+                    <li class="noti-li-container profile-picture">Circle</li>
+                    <li class="noti-li-container user-name">userN</li>
+                </ul>
+            </div>
         </div>
         <div class="navbar-area">
             <div class="user-icon-name-container"></div>
