Add ul and li tags in user icon name container

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
             </div>
         </div>
         <div class="navbar-area">
-            <div class="user-icon-name-container"></div>
+            <div class="user-icon-name-container">
+                <ul>
+                    <li class="li-user-info user-icon"></li>
+                    <li class="li-user-info user-icon"></li>
+                    <li class="li-user-info user-icon"></li>
+                </ul>
+            </div>
             <div class="list-post-container"></div>
         </div>
         <div class="project-display-area">
