Add ul and li tag in list post container

--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
             <div class="user-icon-name-container">
                 <ul>
                     <li class="li-user-info user-icon"></li>
-                    <li class="li-user-info user-icon"></li>
-                    <li class="li-user-info user-icon"></li>
+                    <li class="li-user-info user-hello"></li>
+                    <li class="li-user-info user-name"></li>
                 </ul>
             </div>
-            <div class="list-post-container"></div>
+            <div class="list-post-container">
+                <ul>
+                    <li class="li-post new-post"></li>
+                    <li class="li-post upload-post"></li>
+                    <li class="li-post share-post"></li>
+                </ul>
+            </div>
         </div>
         <div class="project-display-area">
             <div class="project-area">
