Add text value to li tag

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <div class="navbar-area">
             <div class="user-icon-name-container">
                 <ul>
-                    <li class="li-user-info user-icon"></li>
-                    <li class="li-user-info user-hello"></li>
-                    <li class="li-user-info user-name"></li>
+                    <li class="li-user-info user-icon">Icon</li>
+                    <li class="li-user-info user-hello">Hello</li>
+                    <li class="li-user-info user-name">Ton Nguyen</li>
                 </ul>
             </div>
             <div class="list-post-container">
                 <ul>
-                    <li class="li-post new-post"></li>
-                    <li class="li-post upload-post"></li>
-                    <li class="li-post share-post"></li>
+                    <li class="li-post new-post">New</li>
+                    <li class="li-post upload-post">Upload</li>
+                    <li class="li-post share-post">Share</li>
                 </ul>
             </div>
         </div>
