--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
             <div class="list-post-container">
                 <ul>
-                    <li class="li-post new-post">New</li>
-                    <li class="li-post upload-post">Upload</li>
-                    <li class="li-post share-post">Share</li>
+                    <li class="li-post new-post"><button>New</button></li>
+                    <li class="li-post upload-post"><button>Upload</button></li>
+                    <li class="li-post share-post"><button>Share</button></li>
                 </ul>
             </div>
         </div>
