--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
             </div>
             <div class="trending-area">
                 <div class="trending-header-container">
-                    <h1 class="header"></h1>
+                    <h3 class="header">Trending</h3>
                 </div>
-                <div class="trending-container">
-                    <div class="trending-box"></div>
-                    <div class="trending-box"></div>
-                    <div class="trending-box"></div>
-                    <div class="trending-box"></div>
-                </div>
+                <ul class="trending-container">
+                    <li class="trending-box"></li>
+                    <li class="trending-box"></li>
+                    <li class="trending-box"></li>
+                    <li class="trending-box"></li>
+                </ul>
             </div>
         </div>
     </div>
