Add div tag to logo class to create a logo with html and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <div class="main-grid-container">
         <div class="dashboard-area">
             <div class="icon-container">
-                <div class="logo">Logo</div>
+                <div class="logo">
+                    <div class="logo-box"></div>
+                    <div class="logo-box"></div>
+                    <div class="logo-box"></div>
+                    <div class="logo-box"></div>
+                </div>
                 <div class="dashboard">Dashboard</div>
             </div>
             <ul class="user-information-container">
