Add icon to user information container

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="dashboard">Dashboard</div>
             </div>
             <ul class="user-information-container">
-                <li class="li-container home">Home</li>
-                <li class="li-container profile">Profile</li>
-                <li class="li-container message">Messages</li>
+                <li class="li-container home"><div class="material-icons">home</div><div>Home</div></li>
+                <li class="li-container profile"><div class="material-icons">person</div><div>Profile</div></li>
+                <li class="li-container message"><div class="material-icons">chat</div><div>Message</div></li>
                 <li class="li-container history">History</li>
                 <li class="li-container task">Tasks</li>
                 <li class="li-container community">Communities</li>
