Add icon to history task and communites

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <li class="li-container home"><div class="material-icons">home</div><div>Home</div></li>
                 <li class="li-container profile"><div class="material-icons">person</div><div>Profile</div></li>
                 <li class="li-container message"><div class="material-icons">chat</div><div>Message</div></li>
-                <li class="li-container history">History</li>
-                <li class="li-container task">Tasks</li>
-                <li class="li-container community">Communities</li>
+                <li class="li-container history"><div class="material-icons">history_toggle_off</div><div>History</div></li>
+                <li class="li-container task"><div class="material-icons">task</div><div>Task</div></li>
+                <li class="li-container community"><div class="material-icons">groups</div><div>Communities</div></li>
             </ul>
             <ul class="setting-container">
                 <li class="li-container setting"> Settings</li>
