Add icon to list tag in setting-container class

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <li class="li-container community"><div class="material-icons">groups</div><div>Communities</div></li>
             </ul>
             <ul class="setting-container">
-                <li class="li-container setting"> Settings</li>
-                <li class="li-container support">Support</li>
-                <li class="li-container privacy">Privacy</li>
+                <li class="li-container setting"><div class="material-icons">settings</div><div>Setting</div></li>
+                <li class="li-container support"><div class="material-icons">live_help</div><div>Support</div></li>
+                <li class="li-container privacy"><div class="material-icons">verified_user</div><div>Privacy</div></li>
             </ul>
         </div>
         <div class="searchbar-and-account-area">
