Add icons to search bar container

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="searchbar-and-account-area">
             <div class="search-bar-container">
-                <label class="search-bar-icon" for="search-box">Search</label>
+                <div><label class="search-bar-icon" for="search-box"><span class="material-icons">search</span></label></div>
                 <input type="input" id="search-box">
             </div>
             <div class="noti-user-name-container">
