Remove one div tag in searchbar and account area

--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
                 <div><label class="search-bar-icon" for="search-box"><span class="material-icons">search</span></label></div>
                 <input type="input" id="search-box">
             </div>
-            <div class="noti-user-name-container">
-                <ul>
-                    <li class="noti-li-container icon">IconR</li>
-                    <li class="noti-li-container profile-picture">Circle</li>
-                    <li class="noti-li-container user-name">userN</li>
-                </ul>
-            </div>
+            <ul class="noti-user-name-container">
+                <li class="noti-li-container icon">IconR</li>
+                <li class="noti-li-container profile-picture">Circle</li>
+                <li class="noti-li-container user-name">userN</li>
+            </ul>
         </div>
         <div class="navbar-area">
             <div class="user-icon-name-container">
