Add icon to list in noti user name container

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <input type="input" id="search-box">
             </div>
             <ul class="noti-user-name-container">
-                <li class="noti-li-container icon">IconR</li>
-                <li class="noti-li-container profile-picture">Circle</li>
-                <li class="noti-li-container user-name">userN</li>
+                <li class="noti-li-container icon"><div class="material-icons">notifications_active</div></li>
+                <li class="noti-li-container profile-picture"><div class="material-icons">person_4</div></li>
+                <li class="noti-li-container user-name">Ton Nguyen</li>
             </ul>
         </div>
         <div class="navbar-area">
