Add icon and a few change to user-hello and user-name class

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="navbar-area">
             <div class="user-icon-name-container">
                 <ul>
-                    <li class="li-user-info user-icon">Icon</li>
-                    <li class="li-user-info user-hello">Hello</li>
-                    <li class="li-user-info user-name">Ton Nguyen</li>
+                    <li class="li-user-info user-icon"><div class="material-icons">person_4</div></li>
+                    <li class="li-user-info user-hello">Hi there,</li>
+                    <li class="li-user-info user-name">Ton Nguyen (@tonnguyen)</li>
                 </ul>
             </div>
             <div class="list-post-container">
