Add h4 and p tags inside announcements-box class

--- a/index.html
+++ b/index.html
@@ -154,9 +154,18 @@
                     <h3 class="header">Announcements</h3>
                 </div>
                 <ul class="announcement-container">
-                    <li class="announcements-box"></li>
-                    <li class="announcements-box"></li>
-                    <li class="announcements-box"></li>
+                    <li class="announcements-box">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, debitis!</p>
+                    </li>
+                    <li class="announcements-box">
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, debitis!</p>
+                    </li>
+                    <li class="announcements-box">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, debitis!</p>
+                    </li>
                 </ul>
             </div>
             <div class="trending-area">
