--- a/index.html
+++ b/index.html
@@ -173,10 +173,34 @@
                     <h3 class="header">Trending</h3>
                 </div>
                 <ul class="trending-container">
-                    <li class="trending-box"></li>
-                    <li class="trending-box"></li>
-                    <li class="trending-box"></li>
-                    <li class="trending-box"></li>
+                    <li class="trending-box"><div class="trending-box-outside">
+                        <div class="material-icons">star</div>
+                        <div>
+                            <p>@tengan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div></li>
+                    <li class="trending-box"><div class="trending-box-outside">
+                        <div class="material-icons">star</div>
+                        <div>
+                            <p>@tengan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div></li>
+                    <li class="trending-box"><div class="trending-box-outside">
+                        <div class="material-icons">star</div>
+                        <div>
+                            <p>@tengan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>></li>
+                    <li class="trending-box"><div class="trending-box-outside">
+                        <div class="material-icons">star</div>
+                        <div>
+                            <p>@tengan</p>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div></li>
                 </ul>
             </div>
         </div>
