--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <p>@tengan</p>
                             <p>World Peace Builder</p>
                         </div>
-                    </div>></li>
+                    </div></li>
                     <li class="trending-box"><div class="trending-box-outside">
                         <div class="material-icons">star</div>
                         <div>
